syntax = "proto3";
package storefile.v1;

message File {
    int32 id = 1;
    string name = 2;
    string identifier = 3;
    int64 size = 4;
    string mime_type = 5;
    string created_at = 6;
    string updated_at = 7;
}

service StorefileService {
    rpc Insert(InsertRequest) returns (InsertResponse) {}
    rpc Get(GetRequest) returns (GetResponse) {}
    rpc Delete(DeleteRequest) returns (DeleteResponse) {}
    rpc List(ListRequest) returns (ListResponse) {}
}

message InsertRequest {
    string name = 1;
    string identifier = 2;
    int64 size = 3;
    string mime_type = 4;
    repeated string tags = 5;
}

message InsertResponse {
}

message GetRequest {
    string id = 1;
}

message GetResponse {
    File file = 1;
}

message DeleteRequest {
    string id = 1;
}

message DeleteResponse {
}

message ListRequest {
}

message ListResponse {
    repeated File files = 1;
}

